Initial commit: Get background image from gmaps API

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
 
     <form id="form-container" class="form-container">
-        <label for="street">Street: </label><input type="text" id="street" value="">
-        <label for="city">City: </label><input type="text" id="city" value="">
+        <label for="street">Street: </label>
+        <input type="text" id="street" value="">
+        <label for="city">City: </label>
+        <input type="text" id="city" value="">
         <button id="submit-btn">Submit</button>
     </form>
 
@@ -29,7 +31,7 @@
         <ul id="nytimes-articles" class="article-list">What's going on in your new city? Enter an address and hit submit and the NY Times will tell you here!</div>
     </div>
 
-    <script src="js/libs/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
